# STM32Fxx_TCS34725

./: Cargo.toml  memory.x  readme.md
.cargo/: config
src/: main.rs
